[metadata]
name = aradf
version = 0.0.2
author = Mutlaq Hijazi
author_email = Mutlaq.086@gmail.com
description = For converting pdf documents to txt files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mutlaq0/aradf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
     opencv-python
     pytesseract
     numpy
     typing
     PyMuPDF
     Pillow
python_requires = >=3.7
include_package_data = True